# mission_manager

./: CMakeLists.txt  README.md  package.xml  setup.py
action/: Behavior.action
cfg/: mission_manager.cfg
doc/: conf.py  index.rst  manifest.yaml  mission_manager_node.rst  modules.rst
launch/: annie.launch
node/: mission_manager_navigator.py  mission_manager_node.py
nodes/: mission_manager_navigator.py  mission_manager_node.py
plantuml/: README.md  mission_manager.uml
src/: trackpatterns.py
src/mission_manager/: camp_interface.py  track_patterns.py
srv/: TaskInformationIdList.srv  TaskInformationList.srv  TaskManagerCmd.srv
